# ics8580-gstreamer1.0-plugin

./: README.md
gst-template-sink/gst-plugin/: Makefile.in  config.status  configure  configure.ac  global.sh  libtool  test00.sh  test01-tv.sh  test02-rgb.sh  test03-pngtv-roi.sh  test03-pngtv.sh  test04-pngtv-scale.sh  test05-pngtv-stream.sh  test06-desktoptv.sh
gst-template-sink/gst-plugin/src/: Makefile.am  Makefile.in  gst8580capture.c  gst8580capture.h  gst8580sink.c  gst8580sink.h  videotestsrc.c  videotestsrc.h
gst-template-sink/gst-plugin/tools/: make_element
gst-template-src/gst-plugin/: configure  configure.ac  test00-all-atonce.sh
gst-template-src/gst-plugin/src/: Makefile.am  Makefile.in  gst8580capture.c  gst8580capture.h  gst8580src.c  gst8580src.h  pip.sh  testall-atonce.sh  testall-atonce.sh.save  testall.sh  testinput.sh  videotestsrc.c  videotestsrc.h
